--- a/Front-end/site-cauldron/src/styles/User.css
+++ b/Front-end/site-cauldron/src/styles/User.css
@@ -13,7 +13,7 @@ button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.body {
+.user {
   background: #d9dad9;
   margin: auto;
   font-weight: 700;
@@ -23,14 +23,14 @@ button {
   display: block;
   text-align: center;
 }
-.body p {
+.user p {
   text-align: center;
   display: block;
 }
-.body input {
+.user input {
   width: fit-content;
   text-align: center;
 }
-.body h2 {
+.user h2 {
   text-decoration: underline;
 }
