--- a/Front-end/site-cauldron/src/styles/Menu.css
+++ b/Front-end/site-cauldron/src/styles/Menu.css
@@ -18,28 +18,28 @@ nav{
   }
 
   
-  ul{
+  .nav ul{
     width: 50%;
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
   
-  li {
+  .nav li {
     padding: 5px;
     padding-top: 15px;
     float: right;
   }
   
-  li:first-child {
+  .nav li:first-child {
     margin-right: 10px;
   }
   
-  li:hover {
+  .nav li:hover {
     background-color: #0ace59;
   }
 
-img{
+.nav img{
     height: 30px;
     width: 30px;
 }
