--- a/Front-end/src/styles/Preview.css
+++ b/Front-end/src/styles/Preview.css
@@ -1,9 +1,66 @@
-.Preview{
-    margin-top: 70px;    
-    padding-left: 20px;
-    padding-right: 10px;
-    padding-bottom: 30%;
-    display: flexbox;   
-    text-align: center;
+.Preview {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* border-radius: 25px; */
+    background-clip: padding-box;
+    background-color: rebeccapurple;
+    border: 1px solid #000000;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: inline;
+    padding-top: 10px;
+  }  
+.Preview span{
+    font-size: 20px;
+    font-weight:bold;
+    display: inline;
+    padding-left: 10px;
 }
+
+.Preview h2 {
+    display: inline;
+    margin: 2px;
+    padding-left: 35%;
+    padding-right: 35%;
+    color:white;    
+    border-color: black;
+}
+  
+  .Preview div {
+    margin-top: 10px;
+    padding: 2%;
+    padding-bottom: 6%;
+    background-color: #D9DAD9;
+    /* -1px here for to compansate for the outer border of the container */
+    -moz-border-radius: 0 0 9px 9px;
+    border-radius: 0 0 9px 9px;
+    -webkit-border-radius: 0 0 9px 9px;
+    display: inline-flex;
+  }
+
+  .Preview button{
+    width: 60%;
+    font: 20px;
+}
+  .Close {
+    float: right;
+    height: 26px;
+    width: 26px;
+    padding: 5px;
+    padding-top: 2px;
+  }
+  .Close:hover {
+    background-color: #0ace59;
+    height: 24px;
+    width: 24px;
+  }
+
+  .ImgFrame{
+      display: flex;
+      width: 60%;
+  }
 
