--- a/Front-end/src/styles/Menu.css
+++ b/Front-end/src/styles/Menu.css
@@ -45,3 +45,11 @@
   padding-top: 10px;
   padding-left: 10px;
 }
+.Menu button {
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
