--- a/Front-end/src/styles/Projects.css
+++ b/Front-end/src/styles/Projects.css
@@ -1,15 +1,15 @@
-.Proyects{
+.Projects{
     margin-top: 70px;
     text-align: center;
     margin-bottom: 20%;
 }
-.Proyects table{
+.Projects table{
     width: 100%;
 }
-.Proyects th, td{
+.Projects th, td{
     width: 20%;
 }
-.Proyects hr{
+.Projects hr{
     height: 10px;
     background-color: #C4C4C4;
     margin-left: 5%;
