Restructuring Menu pt1

--- a/Front-end/src/styles/About.css
+++ b/Front-end/src/styles/About.css
@@ -27,13 +27,13 @@
   height: 24px;
   width: 24px;
 }
-
+/* 
 h2 {
   display: inline;
   margin: 2px;
   padding-left: 35%;
   padding-right: 35%;
-}
+} */
 
 .about div {
   margin-top: 10px;
