--- a/Front-end/src/index.css
+++ b/Front-end/src/index.css
@@ -6,6 +6,8 @@ body {
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #8E40BD;
+  background-image: url("https://www.transparenttextures.com/patterns/strange-bullseyes.png");
 }
 
 code {
