--- a/Front-end/src/styles/User.css
+++ b/Front-end/src/styles/User.css
@@ -1,4 +1,4 @@
-input {
+/* input {
   font-family: "Montserrat", sans-serif;
   color: #535353;
 }
@@ -8,10 +8,10 @@ button {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   background: rgba(0, 117, 153, 0.8); /*cambiar inline*/
-  border: 1px solid #000;
+  /* border: 1px solid #000;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+} */ 
 
 .user {
   background: #d9dad9;
