--- a/Front-end/src/components/Navigation/Footer/Footer.module.css
+++ b/Front-end/src/components/Navigation/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-.footer {
+.Footer {
   position: fixed;
   display: flex;
   align-items: center;
@@ -10,19 +10,19 @@
   height: 15%;
   min-height: 70px;
   padding-bottom: 10px;
-  background-color: #4b1e66; 
+  background-color: #4b1e66;
 }
-.footer div {
+.Footer div {
   color: #8e40bd;
   text-align: center;
   display: block;
   width: 33%;
 }
-.footer h2 {
+.Footer h2 {
   color: #0ace59;
   font-weight: 200;
   margin-bottom: 5px;
 }
-.footer p {
+.Footer p {
   margin: 0;
 }
