--- a/Front-end/src/components/Order/Transactions.module.css
+++ b/Front-end/src/components/Order/Transactions.module.css
@@ -1,34 +1,9 @@
-/* input {
-  font-family: "Montserrat", sans-serif;
-  color: #535353;
-}
-
-span {
-  margin-top: 26px;
-  margin-bottom: 5px;
-}
-p {
-  font-weight: 300;
-}
-button {
-  padding: 2%;
-  margin: 2%;
-  margin-right: 0;
-  width: auto;
-  height: 45px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  background: #ffe924cc; cambiar inline */
-  /* border: 1px solid #000;
-  box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-} */
-.transactional {
+.Transactional {
   background: #430d7578;
   padding: 50px;
 }
 
-.transaction {
+.Transaction {
   background: #d9dad9;
   margin: auto;
   font-weight: 700;
@@ -38,7 +13,32 @@ button {
   display: block;
   text-align: left;
 }
-.detail {
+
+.Transaction input {
+  font-family: "Montserrat", sans-serif;
+  color: #535353;
+}
+
+.Transaction span {
+  margin-top: 26px;
+  margin-bottom: 5px;
+}
+.Transaction p {
+  font-weight: 300;
+}
+.Transaction button {
+  padding: 2%;
+  margin: 2%;
+  margin-right: 0;
+  width: auto;
+  height: 45px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  background: #ffe924cc;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.Detail {
   margin: 0;
   text-align: center;
   padding: 10px;
@@ -47,11 +47,12 @@ button {
   display: inline-flex;
 }
 
-.transaction h1 {
+.Transaction h1 {
+  margin-left: 10px;
   color: #400369;
 }
 
-.detailBox {
+.DetailBox {
   display: grid;
   align-items: center;
   width: 60%;
